# mbf-tp-xmp

./: .gitmodules  CMakeLists.txt
XMPCore/source/: ExpatAdapter.cpp
XMPFiles/source/FormatSupport/: SVG_Adapter.cpp
